--- a/puzzle/sass/_media.scss
+++ b/puzzle/sass/_media.scss
@@ -819,11 +819,25 @@
     }
 }
 
-@media (max-width: 1000px) {
+@media (max-width: 1400px) {
     .portfolio {
-        &-swiper {
-            padding: 0 60px;
+        &__content {
+            max-width: 450px;
+            p {
+                max-width: 360px;
+            }
         }
+        &-swiper {
+            padding: 0 50px;
+        }
+        &-slide {
+            padding: 32px 50px 500px 20px;
+        }
+    }
+}
+
+@media (max-width: 1200px) {
+    .portfolio {
         &-wraper {
             position: relative;
             width: 100%;
@@ -831,7 +845,7 @@
         &-slide {
             width: 100%;
             height: auto;
-            padding: 32px 50px 500px 32px;
+            padding: 32px 50px 500px 20px;
             border-radius: 56px;
             display: flex;
             flex-direction: column;
@@ -846,6 +860,9 @@
             justify-content: space-between;
             height: auto;
             gap: 20px;
+            p {
+                max-width: 100%;
+            }
         }
         &__group {
             position: absolute;
@@ -901,14 +918,17 @@
         }
         .work_top_mobile_5 {
             display: block;
-            bottom: 0;
+            bottom: -50px;
             max-width: 70%;
             width: 100%;
             left: 0;
         }
         .work_bottom_6 {
-            bottom: 0;
+            bottom: -200px;
             max-width: 80%;
+            right: 0;
+        }
+        .work_top_6 {
             right: 0;
         }
         .work_top_7 {
@@ -954,7 +974,7 @@
             gap: 20px;
         }
         .work-bottom {
-            bottom: 30%;
+            bottom: 0;
             right: 50px;
             left: 20px;
             z-index: 2;
@@ -1055,7 +1075,7 @@
         }
         .work_bottom_5 {
             right: 50px;
-            bottom: 200px;
+            bottom: 0;
             max-width: 90%;
             right: 0;
         }
@@ -1101,6 +1121,17 @@
             max-width: 70%;
             width: 100%;
             left: 0;
+        }
+    }
+}
+
+@media (max-width: 460px) {
+    .portfolio {
+        .work-bottom {
+            bottom: 30%;
+        }
+        .work_bottom_5 {
+            bottom: 200px;
         }
     }
 }
