--- a/puzzle/sass/_media.scss
+++ b/puzzle/sass/_media.scss
@@ -1117,6 +1117,16 @@
             }
         }
     }
+    .terms {
+        &_flex {
+            padding: 50px 0;
+            flex-direction: column;
+        }
+    }
+    .btn-accept-terms,
+    .btn-to-home {
+        width: 100%;
+    }
 }
 
 @media (max-width: 460px) {
@@ -1165,6 +1175,39 @@
                 font-weight: 400;
                 line-height: 22.4px;
             }
+        }
+    }
+    .terms {
+        margin-top: 120px;
+
+        &__section {
+            margin-bottom: 40px;
+        }
+
+        &__title {
+            font-family: DM Sans;
+            font-size: 24px;
+            font-weight: 700;
+            line-height: 33.6px;
+        }
+
+        &__subtitle {
+            font-family: Liberation Sans;
+            font-size: 16px;
+            font-weight: 400;
+            line-height: 22.4px;
+        }
+        ul {
+            padding: 20px 0;
+            li {
+                font-family: Liberation Sans;
+                font-size: 16px;
+                font-weight: 400;
+                line-height: 22.4px;
+            }
+        }
+        &-second-list {
+            margin-left: 15px !important;
         }
     }
 }
