--- a/puzzle/sass/style.scss
+++ b/puzzle/sass/style.scss
@@ -2050,12 +2050,100 @@ a {
         }
     }
 }
+.terms {
+    margin-top: 140px;
+
+    &__section {
+        margin-bottom: 64px;
+    }
+
+    &__date {
+        color: #120923b2;
+        font-family: DM Sans;
+        font-size: 16px;
+        font-weight: 400;
+        line-height: 22.4px;
+        text-align: left;
+        margin-bottom: 4px;
+    }
+
+    &__title {
+        color: #120923;
+        font-family: DM Sans;
+        font-size: 32px;
+        font-weight: 700;
+        line-height: 44.8px;
+    }
+
+    &__subtitle {
+        color: #120923;
+        font-family: Liberation Sans;
+        font-size: 20px;
+        font-weight: 400;
+        line-height: 28px;
+
+        span {
+            font-weight: 700;
+            color: #399cf8;
+            text-decoration: underline;
+        }
+    }
+    ul {
+        padding: 30px 0;
+        list-style: none;
+        li {
+            font-family: Liberation Sans;
+            font-size: 20px;
+            font-weight: 400;
+            line-height: 28px;
+            span {
+                font-weight: 700;
+                color: #399cf8;
+                text-decoration: underline;
+            }
+        }
+    }
+    &-second-list {
+        list-style: outside !important;
+        margin-left: 30px !important;
+    }
+    &_flex {
+        display: flex;
+        align-items: center;
+        justify-content: end;
+        gap: 16px;
+        padding: 60px 0;
+    }
+}
 
 .separator {
     width: 100%;
     height: 2px;
     background: linear-gradient(to right, #00000035, #fefefe);
     margin: 12px 0;
+}
+
+.btn-to-home,
+.btn-accept-terms {
+    padding: 16px 32px;
+    border: 2px solid #120923b2;
+    color: #120923;
+    font-family: Liberation Sans;
+    font-size: 16px;
+    font-weight: 700;
+    line-height: 20.8px;
+    border-radius: 100px;
+    background-color: transparent;
+    cursor: pointer;
+    &:hover {
+        opacity: 0.8;
+    }
+}
+
+.btn-accept-terms {
+    color: #fff;
+    background: linear-gradient(to right, #76bdff, #0c84f2);
+    border: transparent;
 }
 
 #cookieNotice {
